change in ResponseDTO to send client type as well.